@@ -1,6 +1,14 @@
 [12.2] released ...
 * When a MIME message part is not of the "text/" content type, always
   send it in base64 to avoid issues with CRLF conversion (David Ronis).
+* Character set conversion is now also applied to attachments if they
+  have the "text/" content type. This is necessary because with the
+  "sendcharsets" variable, the character set declaration that becomes
+  effective in the message part is otherwise unpredictable.
+* Character set conversion is now only applied to message parts that
+  have the "text/" content type. Previously, a message part that did
+  not contain any control characters but was not of type "text/" was
+  converted.
 * When message file names in a maildir folder do not contain the ":2,"
   preceding the flags part, append one (Brandon Andrews).
 * A "STRIP" makefile variable has been introduced to control the strip
